feat: implementar os modelos floresta aleatória e svm

--- a/src/fakenews_experiment.ipynb
+++ b/src/fakenews_experiment.ipynb
@@ -5,7 +5,7 @@
    "id": "e84c76d9-7707-494c-be3a-34f7772b6e4d",
    "metadata": {},
    "source": [
-    "1. Data Collection and Exploration"
+    "# 1. Carregar o dataset e explorar a estrutura do dataframe"
    ]
   },
   {
@@ -16,24 +16,21 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# carregar o dataset\n",
-    "news = pd.read_csv('../dataset/WELFake_Dataset.csv')\n",
+    "# carregar o dataframe, embaralhar os dados, resetar os index e remover coluna \"Unnamed\" inútil\n",
+    "df_news_70k = (\n",
+    "    pd.read_csv('../dataset/WELFake_Dataset.csv')\n",
+    "    .sample(frac=1)\n",
+    "    .reset_index(drop=True)\n",
+    "    .drop(\"Unnamed: 0\", axis=\"columns\")\n",
+    ")\n",
     "\n",
-    "# mostra a primeira linha do dataset\n",
-    "print(\"News Sample:\")\n",
-    "print(news.head())\n",
+    "# mostra as primeiras 5 linhas do df\n",
+    "print(\"Primeiras 5 linhas do dataframe:\")\n",
+    "print(df_news_70k.head())\n",
     "\n",
-    "# plota um gráfico com a distribuição das das News e o tamanho dos artigos x frequencia\n",
-    "news['text_length'] = news['text'].str.len()\n",
-    "\n",
-    "plt.hist(news['text_length'], bins=100, alpha=0.5, label='News')\n",
-    "plt.legend(loc='upper right')\n",
-    "plt.xlabel('Article Length')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Article Lengths')\n",
-    "plt.show()"
+    "# mostra a quantidade de linhas e colunas\n",
+    "print(f\"\\nQuantidade de linhas x colunas: {df_news_70k.shape}\")"
    ]
   },
   {
@@ -41,7 +38,7 @@
    "id": "63f65a7d-bc22-41cc-888a-61e8cacc6055",
    "metadata": {},
    "source": [
-    "TRATAR O DATASET"
+    "# 2. Pré processamento: remover nulos, criar amostras menores e preprocessar os textos"
    ]
   },
   {
@@ -51,43 +48,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# esse comando mostra quantos valores não nulos tem em cada campo,\n",
-    "news.info()\n",
-    "# no title tem \"71576\" e no text tem \"72095\" o que é menos que o total \"72134\"\n",
-    "# como os dois campos interassam vou apagar os registros que nao tenham um deles com os comandos abaixo:\n",
-    "news.dropna(subset=[\"title\", \"text\"], inplace=True) # implace ao inves de retornar um novo dataframe ele altera o original direto\n",
+    "# mostra informações do dataframe\n",
+    "print(\"Informações sobre os tipos de dados e quantidades de nulos:\")\n",
+    "df_news_70k.info()\n",
     "\n",
-    "print(\"Após apagar:\")\n",
-    "news.info()\n",
-    "# assim fecha em \"71537\" registros completos\n"
+    "# apaga as linhas que tem \"title\" ou \"text\" nulos, \n",
+    "df_news_70k.dropna(subset=[\"title\", \"text\"], inplace=True) # implace ao invés de retornar um novo dataframe ele altera o original direto\n",
+    "\n",
+    "print(\"\\nApós apagar os nulos:\")\n",
+    "df_news_70k.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d589b83d-3842-4446-ba34-405071dff209",
+   "metadata": {},
+   "source": [
+    "# verificar distribuição entre notícias reais e falsas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27b0e45f-fec8-44bf-85e1-24496023265c",
+   "id": "e39ddca6-0ab9-4825-abd0-3757f6c50882",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "import nltk\n",
-    "\n",
-    "#downloading stopwords and punkt\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('punkt')\n",
-    "\n",
-    "def get_most_common_words(texts, num_words=10):\n",
-    "    all_words = []\n",
-    "    for text in texts:\n",
-    "        all_words.extend(nltk.word_tokenize(text.lower()))\n",
-    "    stop_words = set(nltk.corpus.stopwords.words('english'))\n",
-    "    words = [word for word in all_words if word.isalpha() and word not in stop_words]\n",
-    "    word_counts = Counter(words)\n",
-    "    return word_counts.most_common(num_words)\n",
-    "\n",
-    "words = get_most_common_words(news['text'])\n",
-    "\n",
-    "print('News:', words)"
+    "print(\"\\nContagem de labels após remover nulos  (1 = real, 0 = fake):\")\n",
+    "print(df_news_70k['label'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bce87f7-02bc-4144-b268-e5153ce57c4a",
+   "metadata": {},
+   "source": [
+    "# criar dataframes com tamanho reduzido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2453cd7-cc47-4b83-8d5d-4eb86e6e9583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_news_1k = df_news_70k[:1000].copy()\n",
+    "df_news_10k = df_news_70k[:10000].copy()\n",
+    "df_news_20k = df_news_70k[:20000].copy()\n",
+    "df_news_30k = df_news_70k[:30000].copy()\n",
+    "df_news_40k = df_news_70k[:40000].copy()\n",
+    "df_news_50k = df_news_70k[:50000].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0efedbc-343f-4990-9af0-528447015f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# escolher o dataframe que será utilizado abaixo\n",
+    "df = df_news_1k.copy()"
    ]
   },
   {
@@ -95,13 +117,13 @@
    "id": "b9ab7c6d-c18e-4838-a455-d47e5a5c2f5f",
    "metadata": {},
    "source": [
-    "2. Text Preprocessing\n",
+    "# pré processamento do texto\n",
     "\n",
-    "PASSO A PASSO:\n",
-    "    1. Lowercasing the text\n",
-    "    2. Removing punctuation and digits\n",
-    "    3. Removing stop words\n",
-    "    4. Stemming or lemmatizing the text\n"
+    "passo a passo:\n",
+    "1. Converter o texto para minúsculas\n",
+    "2. Remover pontuação e dígitos\n",
+    "3. Remover palavras irrelevantes como artigos e pronomes(stop words)\n",
+    "4. Aplicar Stemming (remover o sufixo das palavaras exemplo \"mudando\" \"mudaria\" para \"mud\") ou lemmatizing (mais sofisticado reduz a palavra para a forma base \"mudaria\" ou \"mudado\" viraria mudar)"
    ]
   },
   {
@@ -113,32 +135,34 @@
    "source": [
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "import string\n",
+    "import nltk\n",
     "\n",
+    "nltk.download(\"punkt\") # remove as pontuações\n",
+    "nltk.download(\"stopwords\") # remove as stop words \n",
     "nltk.download('wordnet')\n",
     "\n",
     "stop_words = set(stopwords.words('english'))\n",
-    "stemmer = PorterStemmer()\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "def preprocess_text(text):\n",
-    "    # Lowercase the text\n",
+    "    # letras minúsculas\n",
     "    text = text.lower()\n",
     "\n",
-    "    # Remove punctuation and digits\n",
+    "    # remove a pontuação e os digitos\n",
     "    text = text.translate(str.maketrans('', '', string.punctuation + string.digits))\n",
     "\n",
-    "    # Tokenize the text\n",
+    "    # tokeniza o texto\n",
     "    words = word_tokenize(text)\n",
     "\n",
-    "    # Remove stop words\n",
+    "    # remover as stop words\n",
     "    words = [word for word in words if word not in stop_words]\n",
     "\n",
-    "    # Stem or lemmatize the words\n",
-    "    words = [stemmer.stem(word) for word in words]\n",
+    "    # aplicar lemmatizer nas palavras\n",
+    "    words = [lemmatizer.lemmatize(word) for word in words]\n",
     "   \n",
-    "        # Join the words back into a string\n",
+    "    # junta as palavras de volta numa string\n",
     "    text = ' '.join(words)\n",
     "\n",
     "    return text"
@@ -151,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "news['text'] = news['text'].apply(preprocess_text)"
+    "df['text_clean'] = df['text'].apply(preprocess_text)"
    ]
   },
   {
@@ -159,7 +183,23 @@
    "id": "8bb84181-4d00-4ef4-87f0-d80f92ac4499",
    "metadata": {},
    "source": [
-    "3. Model Training"
+    "# 3. Treinamento do modelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a15ca45d-85c2-45c3-987a-2ff2837241f0",
+   "metadata": {},
+   "source": [
+    "## **CountVectorizer = BOW (Bag of Words)**\n",
+    "\n",
+    "**X** = Matriz onde:\n",
+    "- Cada linha = uma notícia\n",
+    "- Cada coluna = uma palavra do vocabulário total\n",
+    "- Os valores = quantas vezes cada palavra aparece\n",
+    "\n",
+    "**y** = Vetor simples com as classificações:\n",
+    "- [1, 0, 1, 0, 1, ...] onde 1 = real, 0 = fake"
    ]
   },
   {
@@ -170,13 +210,11 @@
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import scipy.sparse as sp\n",
-    "import numpy as np\n",
     "\n",
-    "vectorizer = CountVectorizer()\n",
-    "X = vectorizer.fit_transform(news['text']) \n",
+    "vectorizer = CountVectorizer()  # Cria o \"transformador\" BOW\n",
+    "X = vectorizer.fit_transform(df['text_clean'])  # Aplica BOW nos textos\n",
     "\n",
-    "y = news['label'].values"
+    "y = df['label'].values"
    ]
   },
   {
@@ -192,6 +230,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47d22dca-9567-4174-883f-99e6ba5aa38c",
+   "metadata": {},
+   "source": [
+    "# treinar o modelo de regressão linear"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "794fe379-1623-4e1b-92b7-b33d7a82c06a",
@@ -200,8 +246,50 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "clf = LogisticRegression(random_state=42, max_iter=200)\n",
-    "clf.fit(X_train, y_train)\n"
+    "lcr = LogisticRegression(random_state=42, max_iter=200)\n",
+    "lcr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce7f6c7a-7471-42e1-8fc2-69b767420810",
+   "metadata": {},
+   "source": [
+    "# treinar o modelo de árvores aleatórias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc0db03-016d-4b87-959a-457ec1df97be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rfc = RandomForestClassifier()\n",
+    "rfc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d18cffe5-06e6-4984-bf1d-0b3fc4cb3fb8",
+   "metadata": {},
+   "source": [
+    "# treinar o modelo com Support Vector Classifier "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9daaf97-e838-48b3-a43f-01a8209a080b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm = SVC(kernel='linear', probability=True)\n",
+    "svm.fit(X_train, y_train)"
    ]
   },
   {
@@ -209,7 +297,7 @@
    "id": "f7193f4c-d5a1-4a4f-b220-ad04b0de4640",
    "metadata": {},
    "source": [
-    "4. Model Evaluation"
+    "# 4. Avaliação do modelo"
    ]
   },
   {
@@ -221,26 +309,30 @@
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "y_pred = clf.predict(X_test)\n",
+    "y_pred_lcr = lcr.predict(X_test)\n",
+    "y_pred_rfc = rfc.predict(X_test)\n",
+    "y_pred_svm = svm.predict(X_test)\n",
     "\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "precision = precision_score(y_test, y_pred)\n",
-    "recall = recall_score(y_test, y_pred)\n",
-    "f1 = f1_score(y_test, y_pred)\n",
+    "def evaluate_model(y_test, y_pred):\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
     "\n",
-    "print('Accuracy:', accuracy)\n",
-    "print('Precision:', precision)\n",
-    "print('Recall:', recall)\n",
-    "print('F1 Score:', f1)"
+    "    print('Accuracy:', accuracy)\n",
+    "    print('Precision:', precision)\n",
+    "    print('Recall:', recall)\n",
+    "    print('F1 Score:', f1, \"\\n\")\n",
+    "\n",
+    "print(\"Regressão Logística\")\n",
+    "evaluate_model(y_test, y_pred_lcr)\n",
+    "\n",
+    "print(\"Floresta Aleatória\")\n",
+    "evaluate_model(y_test, y_pred_rfc)\n",
+    "\n",
+    "print(\"Support Vector Classifier \")\n",
+    "evaluate_model(y_test, y_pred_svm)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "303400f6-adbe-44a1-898b-4b16722acf98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
