feat: adicionar treinamento com o modelo quântico VQC com a biblioteca qiskit

--- a/src/fakenews_experiment.ipynb
+++ b/src/fakenews_experiment.ipynb
@@ -211,8 +211,11 @@
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "vectorizer = CountVectorizer()  # Cria o \"transformador\" BOW\n",
-    "X = vectorizer.fit_transform(df['text_clean'])  # Aplica BOW nos textos\n",
+    "vectorizer_classic = CountVectorizer()  # Cria o \"transformador\" BOW para os algoritmos clássicos\n",
+    "X_classic = vectorizer_classic.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos clássicos\n",
+    "\n",
+    "vectorizer_quantum = CountVectorizer(max_features = 12)  # Cria o \"transformador\" BOW para os algoritmos quânticos\n",
+    "X_quantum = vectorizer_quantum.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos quânticos\n",
     "\n",
     "y = df['label'].values"
    ]
@@ -226,7 +229,9 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train_classic, X_test_classic, y_train, y_test = train_test_split(X_classic, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train_quantum, X_test_quantum, y_train, y_test = train_test_split(X_quantum, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -247,7 +252,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "lcr = LogisticRegression(random_state=42, max_iter=200)\n",
-    "lcr.fit(X_train, y_train)"
+    "lcr.fit(X_train_classic, y_train)"
    ]
   },
   {
@@ -268,7 +273,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "rfc = RandomForestClassifier()\n",
-    "rfc.fit(X_train, y_train)"
+    "rfc.fit(X_train_classic, y_train)"
    ]
   },
   {
@@ -289,7 +294,7 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "svm = SVC(kernel='linear', probability=True)\n",
-    "svm.fit(X_train, y_train)"
+    "svm.fit(X_train_classic, y_train)"
    ]
   },
   {
@@ -309,9 +314,9 @@
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "y_pred_lcr = lcr.predict(X_test)\n",
-    "y_pred_rfc = rfc.predict(X_test)\n",
-    "y_pred_svm = svm.predict(X_test)\n",
+    "y_pred_lcr = lcr.predict(X_test_classic)\n",
+    "y_pred_rfc = rfc.predict(X_test_classic)\n",
+    "y_pred_svm = svm.predict(X_test_classic)\n",
     "\n",
     "def evaluate_model(y_test, y_pred):\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
@@ -332,6 +337,103 @@
     "\n",
     "print(\"Support Vector Classifier \")\n",
     "evaluate_model(y_test, y_pred_svm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24eb9e48-a1e4-41db-a399-06c588b2350e",
+   "metadata": {},
+   "source": [
+    "# 5. treinar o modelo quântico usando a biblioteca qiskit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "680956da-80dd-4c0c-a146-523150c23537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit.library import ZZFeatureMap\n",
+    "\n",
+    "num_features = X_quantum.shape[1]\n",
+    "\n",
+    "feature_map = ZZFeatureMap(feature_dimension=num_features, reps=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "436bbc49-6596-483e-93e8-f351924c694b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.circuit.library import RealAmplitudes\n",
+    "\n",
+    "ansatz = RealAmplitudes(num_qubits=num_features, reps=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f58ae48-7039-48f8-9170-5f2c2aec773b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit_machine_learning.optimizers import COBYLA\n",
+    "\n",
+    "optimizer = COBYLA(maxiter=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b725bc59-e7ee-405f-a972-c2ca63ed3cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit.primitives import StatevectorSampler as Sampler\n",
+    "\n",
+    "sampler = Sampler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a4d9f1-8242-4839-ab25-5efd6c7d5cc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "from qiskit_machine_learning.algorithms.classifiers import VQC\n",
+    "\n",
+    "vqc = VQC(\n",
+    "    sampler=sampler,\n",
+    "    feature_map=feature_map,\n",
+    "    ansatz=ansatz,\n",
+    "    optimizer=optimizer,\n",
+    ")\n",
+    "\n",
+    "start = time.time()\n",
+    "vqc.fit(X_train_quantum, y_train)\n",
+    "elapsed = time.time() - start\n",
+    "\n",
+    "print(f\"Training time: {round(elapsed)} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79bcfd3d-29f4-4ea2-b974-78307ea27d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fazer previsões com o modelo quântico\n",
+    "y_pred_vqc = vqc.predict(X_test_quantum)\n",
+    "\n",
+    "# Avaliar o modelo quântico\n",
+    "print(\"Variational Quantum Classifier\")\n",
+    "evaluate_model(y_test, y_pred_vqc)"
    ]
   }
  ],
