feat: atualizar script para treinar os modelos com diversas amostras de forma automática

--- a/src/fakenews_experiment.ipynb
+++ b/src/fakenews_experiment.ipynb
@@ -93,11 +93,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_news_0k = df_news_70k[:100].copy()\n",
     "df_news_1k = df_news_70k[:1000].copy()\n",
     "df_news_10k = df_news_70k[:10000].copy()\n",
-    "df_news_20k = df_news_70k[:20000].copy()\n",
     "df_news_30k = df_news_70k[:30000].copy()\n",
-    "df_news_40k = df_news_70k[:40000].copy()\n",
     "df_news_50k = df_news_70k[:50000].copy()"
    ]
   },
@@ -109,7 +108,10 @@
    "outputs": [],
    "source": [
     "# escolher o dataframe que será utilizado abaixo\n",
-    "df = df_news_1k.copy()"
+    "df = df_news_0k.copy()\n",
+    "\n",
+    "print(\"\\nContagem de notícias reais e fakes (1 = real, 0 = fake):\")\n",
+    "print(df['label'].value_counts())"
    ]
   },
   {
@@ -187,37 +189,40 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a15ca45d-85c2-45c3-987a-2ff2837241f0",
-   "metadata": {},
-   "source": [
-    "## **CountVectorizer = BOW (Bag of Words)**\n",
-    "\n",
-    "**X** = Matriz onde:\n",
-    "- Cada linha = uma notícia\n",
-    "- Cada coluna = uma palavra do vocabulário total\n",
-    "- Os valores = quantas vezes cada palavra aparece\n",
-    "\n",
-    "**y** = Vetor simples com as classificações:\n",
-    "- [1, 0, 1, 0, 1, ...] onde 1 = real, 0 = fake"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "2f047cdb-4a08-4ae7-a858-9b28fbc7bfbe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# from sklearn.feature_extraction.text import CountVectorizer\n",
+    "# vectorizer_classic = CountVectorizer()  # Cria o \"transformador\" BOW para os algoritmos clássicos\n",
+    "# X_classic = vectorizer_classic.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos clássicos\n",
+    "# vectorizer_quantum = CountVectorizer(max_features = 12)  # Cria o \"transformador\" BOW para os algoritmos quânticos\n",
+    "# X_quantum = vectorizer_quantum.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos quânticos\n",
     "\n",
-    "vectorizer_classic = CountVectorizer()  # Cria o \"transformador\" BOW para os algoritmos clássicos\n",
-    "X_classic = vectorizer_classic.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos clássicos\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.feature_selection import SelectFromModel\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "vectorizer_quantum = CountVectorizer(max_features = 12)  # Cria o \"transformador\" BOW para os algoritmos quânticos\n",
-    "X_quantum = vectorizer_quantum.fit_transform(df['text_clean'])  # Aplica BOW nos textos para os algoritmos quânticos\n",
+    "y = df['label'].values\n",
     "\n",
-    "y = df['label'].values"
+    "vectorizer_classic = TfidfVectorizer()  # Cria o \"transformador\" TF-IDF para os algoritmos clássicos\n",
+    "X_classic = vectorizer_classic.fit_transform(df['text_clean'])  # Aplica TF-IDF nos textos para os algoritmos clássicos\n",
+    "\n",
+    "# vectorizer_quantum = TfidfVectorizer(max_features = 12)  # Cria o \"transformador\" TF-IDF para os algoritmos quânticos\n",
+    "# X_quantum = vectorizer_quantum.fit_transform(df['text_clean'])  # Aplica TF-IDF nos textos para os algoritmos quânticos\n",
+    "\n",
+    "lasso_selector = SelectFromModel(\n",
+    "    LogisticRegression(random_state=42),\n",
+    "    max_features=12\n",
+    ")\n",
+    "\n",
+    "X_quantum = lasso_selector.fit_transform(X_classic, y)\n",
+    "\n",
+    "scaler = StandardScaler(with_mean=False)\n",
+    "X_quantum_scaled = scaler.fit_transform(X_quantum)"
    ]
   },
   {
@@ -231,7 +236,7 @@
     "\n",
     "X_train_classic, X_test_classic, y_train, y_test = train_test_split(X_classic, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "X_train_quantum, X_test_quantum, y_train, y_test = train_test_split(X_quantum, y, test_size=0.2, random_state=42)"
+    "X_train_quantum, X_test_quantum, y_train, y_test = train_test_split(X_quantum_scaled, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -358,7 +363,7 @@
     "\n",
     "num_features = X_quantum.shape[1]\n",
     "\n",
-    "feature_map = ZZFeatureMap(feature_dimension=num_features, reps=1)"
+    "feature_map = ZZFeatureMap(feature_dimension=num_features, reps=2)"
    ]
   },
   {
@@ -382,7 +387,7 @@
    "source": [
     "from qiskit_machine_learning.optimizers import COBYLA\n",
     "\n",
-    "optimizer = COBYLA(maxiter=50)"
+    "optimizer = COBYLA(maxiter=100)"
    ]
   },
   {
@@ -395,6 +400,14 @@
     "from qiskit.primitives import StatevectorSampler as Sampler\n",
     "\n",
     "sampler = Sampler()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cff5162-bb58-4c78-8090-f730dd3c5ff2",
+   "metadata": {},
+   "source": [
+    "# treinar o modelo VQC (Variational Quantum Classifier)"
    ]
   },
   {
@@ -434,6 +447,173 @@
     "# Avaliar o modelo quântico\n",
     "print(\"Variational Quantum Classifier\")\n",
     "evaluate_model(y_test, y_pred_vqc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4092567-7420-4e46-b8a6-c404d3992449",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ================= CONFIGURAÇÃO GERAL =================\n",
+    "dataset_sizes = {\n",
+    "    '1k': 1000,\n",
+    "    '10k': 10000, \n",
+    "    '30k': 30000,\n",
+    "    '50k': 50000,\n",
+    "    '70k': 70000\n",
+    "}\n",
+    "\n",
+    "quantum_sizes = {\n",
+    "    '1k': 1000,\n",
+    "    '10k': 10000,\n",
+    "    '30k': 30000\n",
+    "}\n",
+    "\n",
+    "# ================= FUNÇÕES AUXILIARES =================\n",
+    "def prepare_data(df):\n",
+    "    \"\"\"Prepara os dados para modelos clássicos e quânticos\"\"\"\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "    from sklearn.linear_model import LogisticRegression\n",
+    "    from sklearn.feature_selection import SelectFromModel\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "    \n",
+    "    y = df['label'].values\n",
+    "    \n",
+    "    # TF-IDF para modelos clássicos\n",
+    "    vectorizer_classic = TfidfVectorizer()\n",
+    "    X_classic = vectorizer_classic.fit_transform(df['text_clean'])\n",
+    "    \n",
+    "    # Seleção de features para modelos quânticos\n",
+    "    lasso_selector = SelectFromModel(\n",
+    "        LogisticRegression(random_state=42),\n",
+    "        max_features=12\n",
+    "    )\n",
+    "    X_quantum = lasso_selector.fit_transform(X_classic, y)\n",
+    "    \n",
+    "    scaler = StandardScaler(with_mean=False)\n",
+    "    X_quantum_scaled = scaler.fit_transform(X_quantum)\n",
+    "    \n",
+    "    return X_classic, X_quantum_scaled, y\n",
+    "\n",
+    "def evaluate_model(y_test, y_pred, model_name, dataset_size):\n",
+    "    \"\"\"Avalia e imprime métricas do modelo\"\"\"\n",
+    "    from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "    \n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    \n",
+    "    print(f'{model_name} - {dataset_size}:')\n",
+    "    print(f'  Accuracy: {accuracy:.4f}')\n",
+    "    print(f'  Precision: {precision:.4f}')\n",
+    "    print(f'  Recall: {recall:.4f}')\n",
+    "    print(f'  F1 Score: {f1:.4f}\\n')\n",
+    "    \n",
+    "    return accuracy, precision, recall, f1\n",
+    "\n",
+    "# ================= PRÉ-PROCESSAMENTO DOS DATASETS =================\n",
+    "print(\"Pré-processando todos os datasets...\")\n",
+    "\n",
+    "# Criar dicionário com todos os datasets pré-processados\n",
+    "datasets = {}\n",
+    "for size_name, size in dataset_sizes.items():\n",
+    "    print(f\"Pré-processando dataset {size_name}...\")\n",
+    "    df_temp = df_news_70k[:size].copy()\n",
+    "    df_temp['text_clean'] = df_temp['text'].apply(preprocess_text)\n",
+    "    datasets[size_name] = df_temp\n",
+    "\n",
+    "# ================= MODELOS CLÁSSICOS =================\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"TREINANDO MODELOS CLÁSSICOS\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Regressão Logística\n",
+    "print(\"\\n--- REGRESSÃO LOGÍSTICA ---\")\n",
+    "for size_name in dataset_sizes.keys():\n",
+    "    df = datasets[size_name]\n",
+    "    X_classic, _, y = prepare_data(df)\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_classic, y, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    lcr = LogisticRegression(random_state=42, max_iter=200)\n",
+    "    lcr.fit(X_train, y_train)\n",
+    "    y_pred = lcr.predict(X_test)\n",
+    "    \n",
+    "    evaluate_model(y_test, y_pred, \"Regressão Logística\", size_name)\n",
+    "\n",
+    "# Floresta Aleatória  \n",
+    "print(\"\\n--- FLORESTA ALEATÓRIA ---\")\n",
+    "for size_name in dataset_sizes.keys():\n",
+    "    df = datasets[size_name]\n",
+    "    X_classic, _, y = prepare_data(df)\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_classic, y, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    rfc = RandomForestClassifier(random_state=42)\n",
+    "    rfc.fit(X_train, y_train)\n",
+    "    y_pred = rfc.predict(X_test)\n",
+    "    \n",
+    "    evaluate_model(y_test, y_pred, \"Floresta Aleatória\", size_name)\n",
+    "\n",
+    "# SVM\n",
+    "print(\"\\n--- SUPPORT VECTOR CLASSIFIER ---\")\n",
+    "for size_name in dataset_sizes.keys():\n",
+    "    df = datasets[size_name]\n",
+    "    X_classic, _, y = prepare_data(df)\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_classic, y, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    svm = SVC(kernel='linear', probability=True, random_state=42)\n",
+    "    svm.fit(X_train, y_train)\n",
+    "    y_pred = svm.predict(X_test)\n",
+    "    \n",
+    "    evaluate_model(y_test, y_pred, \"SVM\", size_name)\n",
+    "\n",
+    "# ================= MODELO QUÂNTICO =================\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"TREINANDO MODELOS QUÂNTICOS\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "print(\"\\n--- VARIATIONAL QUANTUM CLASSIFIER ---\")\n",
+    "for size_name in quantum_sizes.keys():\n",
+    "    df = datasets[size_name]\n",
+    "    _, X_quantum, y = prepare_data(df)\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X_quantum, y, test_size=0.2, random_state=42\n",
+    "    )\n",
+    "    \n",
+    "    # Configuração quântica\n",
+    "    num_features = X_quantum.shape[1]\n",
+    "    feature_map = ZZFeatureMap(feature_dimension=num_features, reps=2)\n",
+    "    ansatz = RealAmplitudes(num_qubits=num_features, reps=3)\n",
+    "    optimizer = COBYLA(maxiter=100)\n",
+    "    \n",
+    "    vqc = VQC(\n",
+    "        sampler=Sampler(),\n",
+    "        feature_map=feature_map,\n",
+    "        ansatz=ansatz,\n",
+    "        optimizer=optimizer,\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"Treinando VQC com {size_name}...\")\n",
+    "    start = time.time()\n",
+    "    vqc.fit(X_train, y_train)\n",
+    "    elapsed = time.time() - start\n",
+    "    \n",
+    "    y_pred = vqc.predict(X_test)\n",
+    "    \n",
+    "    evaluate_model(y_test, y_pred, \"VQC\", size_name)\n",
+    "    print(f\"  Tempo de treino: {round(elapsed)} segundos\\n\")"
    ]
   }
  ],
