feat: aplicar pré processamento para diversas amostras do dataset

--- a/src/fakenews_experiment.ipynb
+++ b/src/fakenews_experiment.ipynb
@@ -38,7 +38,15 @@
    "id": "63f65a7d-bc22-41cc-888a-61e8cacc6055",
    "metadata": {},
    "source": [
-    "# 2. Pré processamento: remover nulos, criar amostras menores e preprocessar os textos"
+    "# 2. Pré processamento"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "895b2203-3318-4d04-a8e3-5d32e8d71fbc",
+   "metadata": {},
+   "source": [
+    "## 2.1 Remover rows com campos nulos"
    ]
   },
   {
@@ -64,7 +72,7 @@
    "id": "d589b83d-3842-4446-ba34-405071dff209",
    "metadata": {},
    "source": [
-    "# verificar distribuição entre notícias reais e falsas"
+    "## 2.2 Verificar a distribuição entre notícias reais e falsas"
    ]
   },
   {
@@ -83,7 +91,7 @@
    "id": "2bce87f7-02bc-4144-b268-e5153ce57c4a",
    "metadata": {},
    "source": [
-    "# criar dataframes com tamanho reduzido"
+    "## 2.3 Criar dataframes com tamanho reduzido para clássicos e quânticos"
    ]
   },
   {
@@ -93,29 +101,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_0k = dataframe[:100].copy()\n",
-    "df_1k = dataframe[:1000].copy()\n",
-    "df_10k = dataframe[:10000].copy()\n",
-    "df_30k = dataframe[:30000].copy()\n",
-    "df_50k = dataframe[:50000].copy()"
+    "# criar dataframes para os modelos clássicos\n",
+    "df_classic_0k = dataframe[:100].copy()\n",
+    "df_classic_1k = dataframe[:1000].copy()\n",
+    "df_classic_10k = dataframe[:10000].copy()\n",
+    "df_classic_30k = dataframe[:30000].copy()\n",
+    "df_classic_50k = dataframe[:50000].copy()\n",
+    "df_classic = dataframe.copy()\n",
+    "\n",
+    "# criar dataframes para os modelos quânticos\n",
+    "df_quantum_0k = df_classic_0k.copy()\n",
+    "df_quantum_1k = df_classic_1k.copy()\n",
+    "df_quantum_10k = df_classic_10k.copy()\n",
+    "df_quantum_30k = df_classic_30k.copy()\n",
+    "df_quantum_50k = df_classic_50k.copy()\n",
+    "df_quantum = df_classic.copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0efedbc-343f-4990-9af0-528447015f3e",
+   "id": "53593c2f-7438-471a-9358-4123fcb4c39a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# escolher o dataframe que será utilizado para o modelo clássico e para o modelo quântico\n",
-    "df_classic = df_1k.copy()\n",
-    "df_quantum = df_0k.copy()\n",
+    "# verificar distribuição entre as labels\n",
+    "print(f\"Classic 0k - Total samples: {len(df_classic_0k)}\")\n",
+    "print(df_classic_0k['label'].value_counts())\n",
+    "print()\n",
     "\n",
-    "print(\"\\nContagem de fake news no df clássico (1 = real, 0 = fake):\")\n",
+    "print(f\"Classic 1k - Total samples: {len(df_classic_1k)}\")\n",
+    "print(df_classic_1k['label'].value_counts())\n",
+    "print()\n",
+    "\n",
+    "print(f\"Classic 10k - Total samples: {len(df_classic_10k)}\")\n",
+    "print(df_classic_10k['label'].value_counts())\n",
+    "print()\n",
+    "\n",
+    "print(f\"Classic 30k - Total samples: {len(df_classic_30k)}\")\n",
+    "print(df_classic_30k['label'].value_counts())\n",
+    "print()\n",
+    "\n",
+    "print(f\"Classic 50k - Total samples: {len(df_classic_50k)}\")\n",
+    "print(df_classic_50k['label'].value_counts())\n",
+    "print()\n",
+    "\n",
+    "print(f\"Classic Full - Total samples: {len(df_classic)}\")\n",
     "print(df_classic['label'].value_counts())\n",
-    "\n",
-    "print(\"\\nContagem de fake news no df quântico (1 = real, 0 = fake):\")\n",
-    "print(df_quantum['label'].value_counts())"
+    "print()"
    ]
   },
   {
@@ -123,13 +156,7 @@
    "id": "b9ab7c6d-c18e-4838-a455-d47e5a5c2f5f",
    "metadata": {},
    "source": [
-    "# pré processamento do texto\n",
-    "\n",
-    "passo a passo:\n",
-    "1. Converter o texto para minúsculas\n",
-    "2. Remover pontuação e dígitos\n",
-    "3. Remover palavras irrelevantes como artigos e pronomes(stop words)\n",
-    "4. Aplicar Stemming (remover o sufixo das palavaras exemplo \"mudando\" \"mudaria\" para \"mud\") ou lemmatizing (mais sofisticado reduz a palavra para a forma base \"mudaria\" ou \"mudado\" viraria mudar)"
+    "## 2.4 Aplicar pré-processamento para todos os dataframes"
    ]
   },
   {
@@ -159,12 +186,15 @@
     "    # remove a pontuação e os digitos\n",
     "    text = text.translate(str.maketrans('', '', string.punctuation + string.digits))\n",
     "\n",
-    "    # tokeniza o texto\n",
+    "    # tokenizar o texto\n",
     "    words = word_tokenize(text)\n",
     "\n",
-    "    # remover as stop words\n",
+    "    # remover as stop words (palavras irrelevantes como artigos e pronomes)\n",
     "    words = [word for word in words if word not in stop_words]\n",
     "\n",
+    "    # Aplicar Stemming (remover o sufixo das palavaras exemplo \"mudando\" \"mudaria\" para \"mud\") \n",
+    "    # ou lemmatizing (mais sofisticado reduz a palavra para a forma base \"mudaria\" ou \"mudado\" viraria mudar)\n",
+    "    \n",
     "    # aplicar lemmatizer nas palavras\n",
     "    words = [lemmatizer.lemmatize(word) for word in words]\n",
     "   \n",
@@ -181,8 +211,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# aplicar pré processamentos nos dataframes\n",
+    "# Aplicar pré-processamento nos dataframes clássicos\n",
+    "df_classic_0k['text_clean'] = df_classic_0k['text'].apply(preprocess_text)\n",
+    "df_classic_1k['text_clean'] = df_classic_1k['text'].apply(preprocess_text)\n",
+    "df_classic_10k['text_clean'] = df_classic_10k['text'].apply(preprocess_text)\n",
+    "df_classic_30k['text_clean'] = df_classic_30k['text'].apply(preprocess_text)\n",
+    "df_classic_50k['text_clean'] = df_classic_50k['text'].apply(preprocess_text)\n",
     "df_classic['text_clean'] = df_classic['text'].apply(preprocess_text)\n",
+    "\n",
+    "# Aplicar pré-processamento nos dataframes quânticos\n",
+    "df_quantum_0k['text_clean'] = df_quantum_0k['text'].apply(preprocess_text)\n",
+    "df_quantum_1k['text_clean'] = df_quantum_1k['text'].apply(preprocess_text)\n",
+    "df_quantum_10k['text_clean'] = df_quantum_10k['text'].apply(preprocess_text)\n",
+    "df_quantum_30k['text_clean'] = df_quantum_30k['text'].apply(preprocess_text)\n",
+    "df_quantum_50k['text_clean'] = df_quantum_50k['text'].apply(preprocess_text)\n",
     "df_quantum['text_clean'] = df_quantum['text'].apply(preprocess_text)"
    ]
   },
