--- a/src/fakenews_experiment.ipynb
+++ b/src/fakenews_experiment.ipynb
@@ -426,13 +426,14 @@
     "    pca = PCA(n_components=n_components_or_n_features)\n",
     "    X_pca = pca.fit_transform(X_scaled.toarray()) \n",
     "    \n",
-    "    print(f\"PCA: {X_scaled.shape[1]} features → {X_pca.shape[1]} componentes\")\n",
-    "    print(f\"Variância explicada: {sum(pca.explained_variance_ratio_):.2%}\")\n",
-    "    \n",
     "    # Split treino/teste \n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "        X_pca, y, test_size=0.2, random_state=42  \n",
     "    )\n",
+    "\n",
+    "    # Converter labels do formato [0, 1] para [-1, 1]\n",
+    "    y_train = np.where(y_train == 0, -1, 1)\n",
+    "    y_test = np.where(y_test == 0, -1, 1)\n",
     "    \n",
     "    return X_train, X_test, y_train, y_test, vectorizer, lasso_selector, scaler, pca  "
    ]
@@ -613,6 +614,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21f9c407-b8ef-430d-8901-0c084cb56902",
+   "metadata": {},
+   "source": [
+    "#### 3.2.6 Treinamento com Redes Neurais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e660b5c0-bd25-4804-9c9a-c65966568711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_neural_network(X_train, y_train):\n",
+    "    from sklearn.neural_network import MLPClassifier\n",
+    "    import time\n",
+    "    \n",
+    "    # Cria modelo de rede neural com arquitetura básica\n",
+    "    model = MLPClassifier(\n",
+    "        hidden_layer_sizes=(100, 50),  \n",
+    "        activation='relu',             \n",
+    "        solver='adam',                  \n",
+    "        max_iter=100,                  \n",
+    "        random_state=42,                \n",
+    "        early_stopping=True             \n",
+    "    )\n",
+    "    \n",
+    "    # Treina o modelo e mede o tempo\n",
+    "    start = time.time()\n",
+    "    model.fit(X_train, y_train)\n",
+    "    elapsed = time.time() - start\n",
+    "    \n",
+    "    print(f\"Training time: {round(elapsed)} seconds\")\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24eb9e48-a1e4-41db-a399-06c588b2350e",
    "metadata": {},
    "source": [
@@ -637,19 +676,24 @@
     "def train_vqc(X_train, y_train, num_features):\n",
     "    from qiskit_machine_learning.algorithms.classifiers import VQC\n",
     "    from qiskit.circuit.library import ZZFeatureMap, RealAmplitudes\n",
+    "    from qiskit.primitives import StatevectorSampler\n",
     "    from qiskit_machine_learning.optimizers import COBYLA\n",
     "    import time\n",
+    "\n",
+    "    # define o sampler \n",
+    "    sampler = StatevectorSampler()\n",
     "    \n",
     "    feature_map = ZZFeatureMap(feature_dimension=num_features, reps=1)\n",
     "\n",
     "    # define o ansatz RealAmplitudes\n",
-    "    ansatz = RealAmplitudes(num_qubits=num_features, reps=2)\n",
-    "\n",
+    "    ansatz = RealAmplitudes(num_qubits=num_features, reps=3)\n",
+    "    \n",
     "    # define o otimizador COBYLA \n",
-    "    optimizer = COBYLA(maxiter=50)\n",
+    "    optimizer = COBYLA(maxiter=100)\n",
     "\n",
     "    # inicializa o classificador VQC\n",
     "    model = VQC(\n",
+    "        sampler=sampler,\n",
     "        feature_map=feature_map,\n",
     "        ansatz=ansatz,\n",
     "        optimizer=optimizer,\n",
@@ -679,59 +723,57 @@
    "outputs": [],
    "source": [
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit import Parameter\n",
+    "from qiskit.circuit.library import ZZFeatureMap, RealAmplitudes\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit_machine_learning.neural_networks import EstimatorQNN\n",
-    "from qiskit.primitives import Estimator\n",
-    "from qiskit_algorithms.optimizers import COBYLA\n",
+    "from qiskit.primitives import StatevectorEstimator\n",
+    "from qiskit_machine_learning.optimizers import COBYLA\n",
     "from qiskit_machine_learning.algorithms.classifiers import NeuralNetworkClassifier\n",
+    "import numpy as np\n",
     "import time\n",
     "\n",
-    "def train_qnn(X_train, y_train, num_features):   \n",
-    "    # Criar circuito quântico \n",
+    "def train_qnn(X_train, y_train, num_features):\n",
+    "    # Cria feature map e ansatz padrão do Qiskit para melhor expressividade\n",
+    "    feature_map = ZZFeatureMap(feature_dimension=num_features, reps=2, entanglement=\"full\")\n",
+    "    ansatz = RealAmplitudes(num_qubits=num_features, reps=2, entanglement=\"full\")\n",
+    "    \n",
+    "    # Combina feature map e ansatz em um circuito quântico único\n",
     "    qc = QuantumCircuit(num_features)\n",
+    "    qc.compose(feature_map, inplace=True)\n",
+    "    qc.compose(ansatz, inplace=True)\n",
     "    \n",
-    "    # Criar parâmetros para inputs e weights\n",
-    "    input_params = [Parameter(f'input_{i}') for i in range(num_features)]\n",
-    "    weight_params = [Parameter(f'weight_{i}') for i in range(num_features)]\n",
+    "    # Define observável que atua em todos os qubits para capturar mais informação\n",
+    "    observable = SparsePauliOp(\"Z\" * num_features)  # Z^{\\otimes n}\n",
     "    \n",
-    "    # Adicionar operações ao circuito \n",
-    "    for i in range(num_features):\n",
-    "        qc.ry(input_params[i], i)  # Rotações Y com parâmetros de input\n",
+    "    # Configura estimador para simulação quântica\n",
+    "    estimator = StatevectorEstimator()\n",
     "    \n",
-    "    # Adicionar camada parametrizada (weights)\n",
-    "    for i in range(num_features):\n",
-    "        qc.rz(weight_params[i], i)  # Rotações Z com parâmetros de weight\n",
-    "    \n",
-    "    # Adicionar algum entrelaçamento\n",
-    "    for i in range(num_features - 1):\n",
-    "        qc.cx(i, i + 1)\n",
-    "    \n",
-    "    # Definir observável (Z no primeiro qubit)\n",
-    "    observable = SparsePauliOp(\"Z\" + \"I\" * (num_features - 1))\n",
-    "    \n",
-    "    # Criar a QNN usando EstimatorQNN \n",
-    "    estimator = Estimator()\n",
+    "    # Cria a rede neural quântica usando os parâmetros do feature map e ansatz\n",
     "    qnn = EstimatorQNN(\n",
     "        circuit=qc,\n",
     "        observables=observable,\n",
-    "        input_params=input_params,\n",
-    "        weight_params=weight_params,\n",
+    "        input_params=feature_map.parameters,\n",
+    "        weight_params=ansatz.parameters,\n",
     "        estimator=estimator\n",
     "    )\n",
     "    \n",
-    "    # Criar classificador com a QNN\n",
+    "    # Inicializa pesos aleatoriamente para evitar barren plateaus\n",
+    "    np.random.seed(42)\n",
+    "    initial_weights = np.random.random(len(ansatz.parameters))\n",
+    "    \n",
+    "    # Cria classificador com mais iterações para melhor convergência\n",
     "    model = NeuralNetworkClassifier(\n",
     "        neural_network=qnn,\n",
-    "        optimizer=COBYLA(maxiter=50),\n",
-    "        initial_point=[0.0] * len(weight_params)  # Ponto inicial para os weights\n",
+    "        optimizer=COBYLA(maxiter=100),\n",
+    "        initial_point=initial_weights\n",
     "    )\n",
     "    \n",
+    "    # Treina o modelo e mede tempo de execução\n",
     "    start = time.time()\n",
     "    model.fit(X_train, y_train)\n",
     "    elapsed = time.time() - start\n",
     "    \n",
-    "    print(f\"Training time: {round(elapsed)} seconds\")\n",
+    "    print(f\"Improved training time: {round(elapsed)} seconds\")\n",
     "    return model"
    ]
   },
@@ -819,15 +861,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32751b3d-4bda-4d65-84de-e1fc41ed4173",
+   "id": "7a69908e-051c-4448-aef1-b606639fc63b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "def train_and_evaluate_vqc(X_train, X_test, y_train, y_test, model_name, dataset_size, num_features):\n",
+    "def train_and_evaluate_knn(X_train, X_test, y_train, y_test, model_name, dataset_size, n_neighbors=5):\n",
     "    # treina o modelo\n",
-    "    model = train_vqc(X_train, y_train, num_features)\n",
+    "    model = train_knn(X_train, y_train, n_neighbors)\n",
     "    \n",
     "    # mede o tempo de inferência\n",
     "    start = time.time()\n",
@@ -844,15 +886,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a69908e-051c-4448-aef1-b606639fc63b",
+   "id": "f9c305c4-ff10-4093-8c2c-10e8136c891c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
     "\n",
-    "def train_and_evaluate_knn(X_train, X_test, y_train, y_test, model_name, dataset_size, n_neighbors=5):\n",
+    "def train_and_evaluate_nn(X_train, X_test, y_train, y_test, model_name, dataset_size):\n",
+    "    # Treina o modelo de rede neural\n",
+    "    model = train_neural_network(X_train, y_train)\n",
+    "    \n",
+    "    # Faz previsões e mede tempo de inferência\n",
+    "    start = time.time()\n",
+    "    y_pred = model.predict(X_test)\n",
+    "    elapsed = time.time() - start\n",
+    "    print(f\"Inference time: {elapsed:.4f} seconds\")\n",
+    "    \n",
+    "    # Avalia o modelo com métricas\n",
+    "    evaluate_model(y_test, y_pred, model_name, dataset_size)\n",
+    "    \n",
+    "    return model, y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32751b3d-4bda-4d65-84de-e1fc41ed4173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "def train_and_evaluate_vqc(X_train, X_test, y_train, y_test, model_name, dataset_size, num_features):\n",
     "    # treina o modelo\n",
-    "    model = train_knn(X_train, y_train, n_neighbors)\n",
+    "    model = train_vqc(X_train, y_train, num_features)\n",
     "    \n",
     "    # mede o tempo de inferência\n",
     "    start = time.time()\n",
@@ -884,11 +951,14 @@
     "    y_pred = model.predict(X_test)\n",
     "    elapsed = time.time() - start\n",
     "    print(f\"Inference time: {elapsed:.4f} seconds\")\n",
+    "\n",
+    "    # converter previsões de [-1, 1] para [0, 1] para match com as labels\n",
+    "    y_pred_converted = np.where(y_pred == -1, 0, 1)\n",
     "    \n",
     "    # avalia o modelo\n",
-    "    evaluate_model(y_test, y_pred, model_name, dataset_size)\n",
+    "    evaluate_model(y_test, y_pred_converted, model_name, dataset_size)\n",
     "    \n",
-    "    return model, y_pred"
+    "    return model, y_pred_converted"
    ]
   },
   {
@@ -1216,7 +1286,7 @@
     "knn_0k, y_pred_knn_0k = train_and_evaluate_knn(\n",
     "    X_train_classic_0k, X_test_classic_0k, \n",
     "    y_train_classic_0k, y_test_classic_0k,\n",
-    "    \"K-Nearest Neighbors\", \"0k\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"0k\", n_neighbors=13\n",
     ")\n",
     "\n",
     "# Classic 1k\n",
@@ -1224,7 +1294,7 @@
     "knn_1k, y_pred_knn_1k = train_and_evaluate_knn(\n",
     "    X_train_classic_1k, X_test_classic_1k, \n",
     "    y_train_classic_1k, y_test_classic_1k,\n",
-    "    \"K-Nearest Neighbors\", \"1k\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"1k\", n_neighbors=13\n",
     ")\n",
     "\n",
     "# Classic 10k\n",
@@ -1232,7 +1302,7 @@
     "knn_10k, y_pred_knn_10k = train_and_evaluate_knn(\n",
     "    X_train_classic_10k, X_test_classic_10k, \n",
     "    y_train_classic_10k, y_test_classic_10k,\n",
-    "    \"K-Nearest Neighbors\", \"10k\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"10k\", n_neighbors=13\n",
     ")\n",
     "\n",
     "# Classic 30k\n",
@@ -1240,7 +1310,7 @@
     "knn_30k, y_pred_knn_30k = train_and_evaluate_knn(\n",
     "    X_train_classic_30k, X_test_classic_30k, \n",
     "    y_train_classic_30k, y_test_classic_30k,\n",
-    "    \"K-Nearest Neighbors\", \"30k\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"30k\", n_neighbors=13\n",
     ")\n",
     "\n",
     "# Classic 50k\n",
@@ -1248,7 +1318,7 @@
     "knn_50k, y_pred_knn_50k = train_and_evaluate_knn(\n",
     "    X_train_classic_50k, X_test_classic_50k, \n",
     "    y_train_classic_50k, y_test_classic_50k,\n",
-    "    \"K-Nearest Neighbors\", \"50k\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"50k\", n_neighbors=13\n",
     ")\n",
     "\n",
     "# Classic Full\n",
@@ -1256,7 +1326,76 @@
     "knn_full, y_pred_knn_full = train_and_evaluate_knn(\n",
     "    X_train_classic, X_test_classic, \n",
     "    y_train_classic, y_test_classic,\n",
-    "    \"K-Nearest Neighbors\", \"Full\", n_neighbors=5\n",
+    "    \"K-Nearest Neighbors\", \"Full\", n_neighbors=13\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97df1dec-a5f4-469a-8483-3c239340d775",
+   "metadata": {},
+   "source": [
+    "## 4.6 Avaliação da Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f3471e-af8e-4219-8715-cc8f480f8bbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Avaliação da Neural Network\n",
+    "print(\"=\" * 50)\n",
+    "print(\"NEURAL NETWORK CLÁSSICA\")\n",
+    "print(\"=\" * 50)\n",
+    "\n",
+    "# Classic 0k\n",
+    "print(\"\\n--- Classic 0k ---\")\n",
+    "nn_0k, y_pred_nn_0k = train_and_evaluate_nn(\n",
+    "    X_train_classic_0k, X_test_classic_0k, \n",
+    "    y_train_classic_0k, y_test_classic_0k,\n",
+    "    \"Neural Network Clássica\", \"0k\"\n",
+    ")\n",
+    "\n",
+    "# Classic 1k\n",
+    "print(\"\\n--- Classic 1k ---\")\n",
+    "nn_1k, y_pred_nn_1k = train_and_evaluate_nn(\n",
+    "    X_train_classic_1k, X_test_classic_1k, \n",
+    "    y_train_classic_1k, y_test_classic_1k,\n",
+    "    \"Neural Network Clássica\", \"1k\"\n",
+    ")\n",
+    "\n",
+    "# Classic 10k\n",
+    "print(\"\\n--- Classic 10k ---\")\n",
+    "nn_10k, y_pred_nn_10k = train_and_evaluate_nn(\n",
+    "    X_train_classic_10k, X_test_classic_10k, \n",
+    "    y_train_classic_10k, y_test_classic_10k,\n",
+    "    \"Neural Network Clássica\", \"10k\"\n",
+    ")\n",
+    "\n",
+    "# Classic 30k\n",
+    "print(\"\\n--- Classic 30k ---\")\n",
+    "nn_30k, y_pred_nn_30k = train_and_evaluate_nn(\n",
+    "    X_train_classic_30k, X_test_classic_30k, \n",
+    "    y_train_classic_30k, y_test_classic_30k,\n",
+    "    \"Neural Network Clássica\", \"30k\"\n",
+    ")\n",
+    "\n",
+    "# Classic 50k\n",
+    "print(\"\\n--- Classic 50k ---\")\n",
+    "nn_50k, y_pred_nn_50k = train_and_evaluate_nn(\n",
+    "    X_train_classic_50k, X_test_classic_50k, \n",
+    "    y_train_classic_50k, y_test_classic_50k,\n",
+    "    \"Neural Network Clássica\", \"50k\"\n",
+    ")\n",
+    "\n",
+    "# Classic Full\n",
+    "print(\"\\n--- Classic Full ---\")\n",
+    "nn_full, y_pred_nn_full = train_and_evaluate_nn(\n",
+    "    X_train_classic, X_test_classic, \n",
+    "    y_train_classic, y_test_classic,\n",
+    "    \"Neural Network Clássica\", \"Full\"\n",
     ")"
    ]
   },
@@ -1265,7 +1404,7 @@
    "id": "71334af8-f354-4959-934c-e89e06140477",
    "metadata": {},
    "source": [
-    "## 4.6 Avaliação do Variational Quantum Classifier"
+    "## 4.7 Avaliação do Variational Quantum Classifier"
    ]
   },
   {
@@ -1334,7 +1473,7 @@
    "id": "350a6de3-1701-4e7a-aa84-3c5b3b3181a5",
    "metadata": {},
    "source": [
-    "## 4.7 Avaliação do Quantum Neural Network"
+    "## 4.8 Avaliação do Quantum Neural Network"
    ]
   },
   {
